WARNING: Before upgrading MIMEDefang, please search this file for
*** NOTE INCOMPATIBILITY ** to see if anything has changed that might
affect your filter.

2021-08-25 Giovanni Bechis <g.bechis@snb.it>

  * MIMEDefang 2.85 RELEASED

2021-07-28 Giovanni Bechis <g.bechis@snb.it>

	* add experimental support to scan emails with Rspamd antispam

2021-07-20 Giovanni Bechis <g.bechis@snb.it>

	* remove --enable_cleanup_with_rm "configure" parameter,
	switch to non reentrant version of readdir(3)

2021-04-20 Dianne Skoll <dianne@skoll.ca>

	* Obtain the Queue-ID as early as possible in the SMTP
	session. Requires the "-y" command-line option to mimedefang.

	* Add support for USE_SETSYMLIST in the system unit and Red Hat
	init script; setting USE_SETSYMLIST=yes adds the "-y" command-line
	option to mimedefang.

2020-11-18 Giovanni Bechis <gbechis@pccc.com>

	* mimedefang.pl: Add support for a configuration file
	to separate data from code

2020-08-19 Giovanni Bechis <g.bechis@snb.it>

	* mimedefang.pl: Add support to scan messages for viruses on a remote
	Clamav server using clamdscan client.

2020-08-16 Giovanni Bechis <g.bechis@snb.it>

	* mimedefang.pl: Add re_match_in_rar_directory function to match
	unwanted file names extensions inside a rar archive file.

2020-06-02 Bill Cole <bill@scconsult.com>

	* mimedefang.pl: Added TLS support to md_check_against_smtp_server


2018-03-21 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.84 RELEASED

	* mimedefang.pl: Correctly use "$mon" rather than "$min" to generate
	quarantine file names.

	* mimedefang-multiplexor: Make "workerinfo nnn" show how long ago
	the last state change was for a given worker.

2017-10-30 Dianne Skoll <dfs@roaringpenguin.com>

	* MIMEDefang 2.83 RELEASED

	* mimedefang.pl: Do not add a Message-ID: header when handing a
	message to SpamAssassin if the original message lacks such a
	header.

	* Add systemd unit files; thanks to Richard Laager.

	* Minor tweaks to the sample filter.
