@@ -2,9 +2,13 @@ WARNING: Before upgrading MIMEDefang, please search this file for
 *** NOTE INCOMPATIBILITY ** to see if anything has changed that might
 affect your filter.
 
+2021-09-26 Giovanni Bechis <g.bechis@snb.it>
+
+	* remove support for Unix::Syslog
+
 2021-08-25 Giovanni Bechis <g.bechis@snb.it>
 
-  * MIMEDefang 2.85 RELEASED
+	* MIMEDefang 2.85 RELEASED
 
 2021-07-28 Giovanni Bechis <g.bechis@snb.it>
 
